# davinci-resolve-mcp

./: README.md  package.json  pyproject.toml  requirements.txt  setup.py
docs/: API_EXPANSION_SUMMARY.md  API_MISSING_METHODS.md  API_PHASE3_SUMMARY.md  API_PHASE4_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md
scripts/: run-now.sh
scripts/setup/: install.sh
src/: proxy.py
src/tools/: __init__.py  colorgroup_complete.py  colorgroup_operations.py  complete_api_coverage.py  gallery.py  gallery_advanced.py  gallerystillalbum_complete.py  mediapool_advanced.py  mediapool_complete.py  mediapoolitem_advanced.py  mediapoolitem_complete.py  phase6_final.py  project_advanced.py  project_complete.py  render_settings.py  resolve_complete.py  timeline_advanced.py  timeline_advanced2.py  timeline_complete.py  timeline_item_complete.py  timeline_operations.py  timelineitem_advanced.py  timelineitem_advanced2.py
src/utils/: platform.py
